profile page added

--- a/src/styles.css
+++ b/src/styles.css
@@ -167,7 +167,18 @@ header {
   max-width: 400px;
   border-radius: 40px;
   background: white;
-  z-index: 9999;
+  z-index: 99;
+}
+
+@media only screen and (max-width: 420px) {
+  header {
+    max-width: 250px;
+  }
+
+  #search-bar {
+    max-width: 70%;
+    padding: 5px;
+  }
 }
 
 header i {
@@ -203,12 +214,16 @@ header input {
 
 .location-list {
   display: none;
-  gap: 10px;
   max-width: 400px;
   position: absolute;
   height: 400px;
   top: 100%;
   right: 0;
+}
+
+.location_contain {
+  display: flex;
+  flex-direction: column;
 }
 
 .location-card {
@@ -217,7 +232,7 @@ header input {
   border-radius: 8px;
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
   text-align: center;
-  cursor: pointer;
+  border-bottom: 2px solid gray;
 }
 
 .location-card h2 {
